force-app/main/default/objects/Tweet__c/Tweet__c.object-meta.xml
<CustomObject>
    <description>Tweets custom object for Twitter Integration App</description>
    <label>Tweet</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Tweet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tweets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>