force-app/main/default/objects/Tweet__c/fields/Engagement_Actions__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Actions__c</fullName>
    <formula>Likes__c +  Reply_Count__c +  Retweet_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>