force-app/main/default/objects/Tweet__c/fields/Reply_Count__c.field-meta.xml
<CustomField>
    <fullName>Reply_Count__c</fullName>
    <label>Reply Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>