force-app/main/default/objects/Tweet__c/fields/Retweet_Count__c.field-meta.xml
<CustomField>
    <fullName>Retweet_Count__c</fullName>
    <label>Retweet Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>