force-app/main/default/objects/Tweet__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>Text area for Tweet</description>
    <label>Text</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>