force-app/main/default/objects/Tweet__c/fields/Tweet_Id__c.field-meta.xml
<CustomField>
    <fullName>Tweet_Id__c</fullName>
    <externalId>true</externalId>
    <label>Tweet Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>