force-app/main/default/objects/Tweet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Created_At__c</columns>
    <columns>Likes__c</columns>
    <columns>Retweet_Count__c</columns>
    <columns>Reply_Count__c</columns>
    <columns>Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>